# omnivoice-tts.cpp

./: .gitignore  CMakeLists.txt  LICENSE  MODEL_SPEC.md  NOTICE  PORT_PLAN.md  README.md  STAGE0_DESIGN.md
scripts/: setup.sh
src/: stage0.cpp  test_codec.cpp  test_qwen3.cpp  test_tokenizer.cpp  tokenizer.hpp  tts.cpp  tts_cuda.cpp
tools/: compare_hidden.py  convert_omnivoice_to_gguf.py  export_tokenizer.py  qwen3_ref.py
